fix: fix overflow horizontal

--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,7 @@
     font-family: 'Inter', sans-serif;
     scroll-behavior: smooth;
 }
+
+body {
+    overflow-x: hidden;
+}
